--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -18,29 +18,21 @@
     display: block;
 }
 
-/* Style for downloadable documents list */
-ul.documents-list {
-    list-style: none;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
     padding: 0;
 }
 
-.documents-list li {
-    margin-bottom: 10px;
+/**#Header{
+    position: fixed;
 }
 
-.documents-list li a {
-    display: block;
-    padding: 10px;
-    background-color: #322f2f;
-    border-radius: 5px;
-    text-decoration: none;
-    color: #ffc107;
-    transition: background-color 0.3s ease;
-}
 
-.documents-list li a:hover {
-    background-color: #e9ecef;
-}
+
+
+
+
 
 
 
