--- a/css/documents.css
+++ b/css/documents.css
@@ -20,3 +20,12 @@ ul.documents-list {
 .documents-list li a:hover {
     background-color: #e9ecef;
 }
+.login-frame {
+    border: 2px solid #ffc107;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 400px;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
