I'll continue tomorrow...

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -1,6 +1,9 @@
 .mb-4{
     margin-bottom:0rem !important;;
 }
+.pb-4{
+    padding-bottom: 7rem !important;
+}
 .nav-link{
     color: #ffc107;
     font-style: italic;
@@ -22,6 +25,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    overflow-y: hidden;
 }
 
 #Header{
@@ -39,20 +43,36 @@ a{
     border-radius: 83px;
     box-shadow: 10px 10px 10px #ffc107;}
 
-    .student-item:hover .d-none{
-        display: block !important;
-    }
-
     .nav-link{
         color: #ffc107 !important;
-        transition: color 0.3s, transform 0.3s, opacity 0.3s;
-    }
+        transition: color 0.4s, transform 0.4s, opacity 0.4s;}
 
     .nav-link:hover{
         color: #6b0453 !important;
-        transform: scale(1.2);
+        transform: scale(1.4);
         opacity: 0.9;
     }
+
+    img {
+        transition: transform 0.3s;
+    }
+
+    img:hover {
+        transform: scale(1.1);
+
+    }
+
+    svg{
+        fill:#ffc107
+    }
+
+        .student-item:hover #hidden-nav-items {
+            display: block !important;
+        }
+
+        .student-item:hover #hidden-nav-items {
+            display: block !important;
+        }
 
 
 
