--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -41,14 +41,14 @@ a{
     margin: 20px auto;
     padding: 20px;
     border-radius: 83px;
-    box-shadow: 10px 10px 10px #ffc107;}
+    box-shadow: 10px 10px 10px #302d23;}
 
     .nav-link{
         color: #ffc107 !important;
         transition: color 0.4s, transform 0.4s, opacity 0.4s;}
 
     .nav-link:hover{
-        color: #6b0453 !important;
+        color: white !important;
         transform: scale(1.4);
         opacity: 0.9;
     }
